--- a/DX12Project/DX12Project.vcxproj
+++ b/DX12Project/DX12Project.vcxproj
@@ -20,7 +20,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\D3D12\D3D12Commands.cpp" />
-    <ClCompile Include="Source\D3D12\D3D12Renderer.cpp" />
+    <ClCompile Include="Source\D3D12\D3D12Descriptor.cpp" />
+    <ClCompile Include="Source\D3D12\D3D12Device.cpp" />
+    <ClCompile Include="Source\D3D12\D3D12RenderInterface.cpp" />
+    <ClCompile Include="Source\D3D12\D3D12Resource.cpp" />
+    <ClCompile Include="Source\D3D12\D3D12SwapChain.cpp" />
     <ClCompile Include="Source\D3D12\D3DApp.cpp" />
     <ClCompile Include="Source\D3D12\D3DUtil.cpp" />
     <ClCompile Include="Source\D3D12\FrameResource.cpp" />
@@ -36,7 +40,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\D3D12\D3D12Commands.h" />
-    <ClInclude Include="Source\D3D12\D3D12Renderer.h" />
+    <ClInclude Include="Source\D3D12\D3D12Descriptor.h" />
+    <ClInclude Include="Source\D3D12\D3D12Device.h" />
+    <ClInclude Include="Source\D3D12\D3D12RenderInterface.h" />
+    <ClInclude Include="Source\D3D12\D3D12Resource.h" />
+    <ClInclude Include="Source\D3D12\D3D12SwapChain.h" />
     <ClInclude Include="Source\D3D12\D3DApp.h" />
     <ClInclude Include="Source\D3D12\D3DUtil.h" />
     <ClInclude Include="Source\D3D12\d3dx12.h" />
