--- a/DX12Project/DX12Project.vcxproj
+++ b/DX12Project/DX12Project.vcxproj
@@ -27,7 +27,9 @@
     <ClCompile Include="Source\D3D12\D3D12SwapChain.cpp" />
     <ClCompile Include="Source\D3D12\D3DApp.cpp" />
     <ClCompile Include="Source\D3D12\D3DUtil.cpp" />
+    <ClCompile Include="Source\D3D12\DDSTextureLoader.cpp" />
     <ClCompile Include="Source\D3D12\FrameResource.cpp" />
+    <ClCompile Include="Source\D3D12\GeometryGenerator.cpp" />
     <ClCompile Include="Source\InputManager.cpp" />
     <ClCompile Include="Source\Renderer\CommandList.cpp" />
     <ClCompile Include="Source\stdafx.cpp">
@@ -48,7 +50,9 @@
     <ClInclude Include="Source\D3D12\D3DApp.h" />
     <ClInclude Include="Source\D3D12\D3DUtil.h" />
     <ClInclude Include="Source\D3D12\d3dx12.h" />
+    <ClInclude Include="Source\D3D12\DDSTextureLoader.h" />
     <ClInclude Include="Source\D3D12\FrameResource.h" />
+    <ClInclude Include="Source\D3D12\GeometryGenerator.h" />
     <ClInclude Include="Source\D3D12\UploadBuffer.h" />
     <ClInclude Include="Source\InputManager.h" />
     <ClInclude Include="Source\Renderer\CommnadList.h" />
