--- a/DX12Project/DX12Project.vcxproj.filters
+++ b/DX12Project/DX12Project.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="Source\D3D12\D3D12Fence.cpp">
       <Filter>Engine\D3D12\Private</Filter>
     </ClCompile>
+    <ClCompile Include="Source\D3D12\D3D12PipelineState.cpp">
+      <Filter>Engine\D3D12\Private</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\D3D12\D3DApp.h">
@@ -165,6 +168,9 @@
       <Filter>Engine\D3D12\Public</Filter>
     </ClInclude>
     <ClInclude Include="Source\D3D12\D3D12Fence.h">
+      <Filter>Engine\D3D12\Public</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\D3D12\D3D12PipelineState.h">
       <Filter>Engine\D3D12\Public</Filter>
     </ClInclude>
   </ItemGroup>
