--- a/DX12Project/DX12Project.vcxproj
+++ b/DX12Project/DX12Project.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\D3D12\D3D12BinaryLargeObject.cpp" />
     <ClCompile Include="Source\D3D12\D3D12Commands.cpp" />
     <ClCompile Include="Source\D3D12\D3D12Descriptor.cpp" />
     <ClCompile Include="Source\D3D12\D3D12Device.cpp" />
@@ -26,6 +27,7 @@
     <ClCompile Include="Source\D3D12\D3D12PipelineState.cpp" />
     <ClCompile Include="Source\D3D12\D3D12RenderInterface.cpp" />
     <ClCompile Include="Source\D3D12\D3D12Resource.cpp" />
+    <ClCompile Include="Source\D3D12\D3D12RootSignature.cpp" />
     <ClCompile Include="Source\D3D12\D3D12SwapChain.cpp" />
     <ClCompile Include="Source\D3D12\D3DApp.cpp" />
     <ClCompile Include="Source\D3D12\D3DUtil.cpp" />
@@ -43,6 +45,7 @@
     <ClCompile Include="Source\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\D3D12\D3D12BinaryLargeObject.h" />
     <ClInclude Include="Source\D3D12\D3D12Commands.h" />
     <ClInclude Include="Source\D3D12\D3D12Descriptor.h" />
     <ClInclude Include="Source\D3D12\D3D12Device.h" />
@@ -50,6 +53,7 @@
     <ClInclude Include="Source\D3D12\D3D12PipelineState.h" />
     <ClInclude Include="Source\D3D12\D3D12RenderInterface.h" />
     <ClInclude Include="Source\D3D12\D3D12Resource.h" />
+    <ClInclude Include="Source\D3D12\D3D12RootSignature.h" />
     <ClInclude Include="Source\D3D12\D3D12SwapChain.h" />
     <ClInclude Include="Source\D3D12\D3DApp.h" />
     <ClInclude Include="Source\D3D12\D3DUtil.h" />
