--- a/DX12Project/DX12Project.vcxproj.filters
+++ b/DX12Project/DX12Project.vcxproj.filters
@@ -108,6 +108,12 @@
     <ClCompile Include="Source\D3D12\D3D12PipelineState.cpp">
       <Filter>Engine\D3D12\Private</Filter>
     </ClCompile>
+    <ClCompile Include="Source\D3D12\D3D12BinaryLargeObject.cpp">
+      <Filter>Engine\D3D12\Private</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\D3D12\D3D12RootSignature.cpp">
+      <Filter>Engine\D3D12\Private</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\D3D12\D3DApp.h">
@@ -171,6 +177,12 @@
       <Filter>Engine\D3D12\Public</Filter>
     </ClInclude>
     <ClInclude Include="Source\D3D12\D3D12PipelineState.h">
+      <Filter>Engine\D3D12\Public</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\D3D12\D3D12BinaryLargeObject.h">
+      <Filter>Engine\D3D12\Public</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\D3D12\D3D12RootSignature.h">
       <Filter>Engine\D3D12\Public</Filter>
     </ClInclude>
   </ItemGroup>
