Add new classes for project reconfiguration
While making the renderer work well, I realized to need to make a class to manage any class type. Because I want to test the ECS code that requires a system that get components as the component type.
That classes is called "Class" and "ClassType" added by me. And also I made class called "EntityInterface" that can manage and get components and entities.
Besides that, I worked more. Overall, the project structure was rebuilt. But we won't be able to see any models or materials in the scene. although I rebuilt it, I couldn't work on root signatures, pipeline objects, etc.

--- a/DX12Project/DX12Project.vcxproj
+++ b/DX12Project/DX12Project.vcxproj
@@ -35,6 +35,7 @@
     <ClCompile Include="Source\D3D12\DDSTextureLoader.cpp" />
     <ClCompile Include="Source\D3D12\FrameResource.cpp" />
     <ClCompile Include="Source\InputManager.cpp" />
+    <ClCompile Include="Source\Object\Class.cpp" />
     <ClCompile Include="Source\Object\Component.cpp" />
     <ClCompile Include="Source\Object\Entity.cpp" />
     <ClCompile Include="Source\Object\EntityQuery.cpp" />
@@ -76,6 +77,7 @@
     <ClInclude Include="Source\D3D12\FrameResource.h" />
     <ClInclude Include="Source\D3D12\UploadBuffer.h" />
     <ClInclude Include="Source\InputManager.h" />
+    <ClInclude Include="Source\Object\Class.h" />
     <ClInclude Include="Source\Object\Component.h" />
     <ClInclude Include="Source\Object\Entity.h" />
     <ClInclude Include="Source\Object\EntityQuery.h" />
